Added social entity configuration; call working method in the test